--- a/gallery.html
+++ b/gallery.html
@@ -154,42 +154,42 @@
         <div class="gallery">
             <div class="photo-card">
                 <div class="photo-frame">
-                    <img src="file:///C:/Users/ADMIN/Music/img/1.jpeg" alt="Photo 1">
+                    <img src="images/1.jpeg" alt="Photo 1">
                 </div>
                 <div class="caption">Our first special moment together</div>
             </div>
 
             <div class="photo-card">
                 <div class="photo-frame">
-                    <img src="file:///C:/Users/ADMIN/Music/img/2.jpeg" alt="Photo 2">
+                    <img src="images/2.jpeg" alt="Photo 2">
                 </div>
                 <div class="caption">Us</div>
             </div>
 
             <div class="photo-card">
                 <div class="photo-frame">
-                    <img src="file:///C:/Users/ADMIN/Music/img/3.jpeg" alt="Photo 3">
+                    <img src="images/3.jpeg" alt="Photo 3">
                 </div>
                 <div class="caption">Until end</div>
             </div>
 
             <div class="photo-card">
                 <div class="photo-frame">
-                    <img src="file:///C:/Users/ADMIN/Music/img/4.jpeg" alt="Photo 4">
+                    <img src="images/4.jpeg" alt="Photo 4">
                 </div>
                 <div class="caption">Happy moments</div>
             </div>
 
             <div class="photo-card">
                 <div class="photo-frame">
-                    <img src="file:///C:/Users/ADMIN/Music/img/5.jpeg" alt="Photo 5">
+                    <img src="images/5.jpeg" alt="Photo 5">
                 </div>
                 <div class="caption">Good one</div>
             </div>
 
             <div class="photo-card">
                 <div class="photo-frame">
-                    <img src="file:///C:/Users/ADMIN/Music/img/6.jpeg" alt="Photo 6">
+                    <img src="images/6.jpeg" alt="Photo 6">
                 </div>
                 <div class="caption">Forever Love</div>
             </div>
