--- a/music.html
+++ b/music.html
@@ -290,11 +290,11 @@
     
     <script>
         const songs = [
-            { name: "Aaruyire", movie: "Love Song", url: "file:///C:/Users/ADMIN/Music/New folder/Aaruyire.mp3", cover: "file:///C:/Users/ADMIN/Music/New folder/Aaruyire.jpg" },
-            { name: "Agasatha", movie: "Romantic", url: "file:///C:/Users/ADMIN/Music/New folder/Agasatha.mp3", cover: "file:///C:/Users/ADMIN/Music/New folder/agasatha.jpg" },
-            { name: "Machaan Machaan", movie: "Fun Song", url: "file:///C:/Users/ADMIN/Music/New folder/Machaan Machaan.mp3", cover: "file:///C:/Users/ADMIN/Music/New folder/machan machan.jpg" },
-            { name: "Pogatha Yennavittu", movie: "Love Melody", url: "file:///C:/Users/ADMIN/Music/New folder/Pogatha-Yennavittu-MassTamilan.com.mp3", cover: "file:///C:/Users/ADMIN/Music/New folder/Pogatha Yennavittu.jpg" },
-            { name: "Pondattee", movie: "Dream Song", url: "file:///C:/Users/ADMIN/Music/New folder/Pondattee-MassTamilan.com.mp3", cover: "file:///C:/Users/ADMIN/Music/New folder/Pondattee.jpg" }
+            { name: "Aaruyire", movie: "Love Song", url: "music/Aaruyire.mp3", cover: "music/Aaruyire.jpg" },
+            { name: "Agasatha", movie: "Romantic", url: "music/Agasatha.mp3", cover: "music/agasatha.jpg" },
+            { name: "Machaan Machaan", movie: "Fun Song", url: "music/Machaan Machaan.mp3", cover: "music/machan machan.jpg" },
+            { name: "Pogatha Yennavittu", movie: "Love Melody", url: "music/Pogatha-Yennavittu-MassTamilan.com.mp3", cover: "music/Pogatha Yennavittu.jpg" },
+            { name: "Pondattee", movie: "Dream Song", url: "music/Pondattee-MassTamilan.com.mp3", cover: "music/Pondattee.jpg" }
         ];
         
         let currentSongIndex = 0;
